--- a/mobile_robotics/CMakeLists.txt
+++ b/mobile_robotics/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(mobile_robotics/)
+project(mobile_robotics)
 
 # Default to C99
 if(NOT CMAKE_C_STANDARD)
@@ -29,7 +29,11 @@ if(BUILD_TESTING)
   # the following line skips cpplint (only works in a git repo)
   # uncomment the line when this package is not in a git repo
   #set(ament_cmake_cpplint_FOUND TRUE)
-  ament_lint_auto_find_test_dependencies()
+  # ament_lint_auto_find_test_dependencies()
 endif()
+
+install(DIRECTORY launch
+DESTINATION share/${PROJECT_NAME}
+)
 
 ament_package()
