--- a/mobile_robotics/package.xml
+++ b/mobile_robotics/package.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>mobile_robotics/</name>
+  <name>mobile_robotics</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>Package for mobile_robotics</description>
   <maintainer email="pmkumar1308@tu-berlin.de">muthukumar</maintainer>
-  <license>TODO: License declaration</license>
+  <license>MIT license</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
+
+  <exec_depend>demo_nodes_cpp</exec_depend>
+  <exec_depend>demo_nodes_py</exec_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
