--- a/manipulation/CMakeLists.txt
+++ b/manipulation/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(manipulation/)
+project(manipulation)
 
 # Default to C99
 if(NOT CMAKE_C_STANDARD)
@@ -32,4 +32,11 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
+install(DIRECTORY launch
+DESTINATION share/${PROJECT_NAME}
+)
+
+install(DIRECTORY description
+DESTINATION share/${PROJECT_NAME}
+)
 ament_package()
